--- a/part3.tex
+++ b/part3.tex
@@ -186,3 +186,42 @@ Successor-а пры яго наяўнасці.
 (2595895 і 2598984 адпаведна). Так жа адзначым, што для сеткі
 10.\-10.\-33.\-0/24 метрыка змянілася толькі для 1 маршрута, што
 мы і бачылі ў табліцы EIGRP маршрутаў (лістынг \ref{lst: R1 after/routes}).
+
+\subsubsection{Маршрутызатар 2.}
+
+У лістынгу \ref{lst: R2 after/routes} прадстаўлена табліца
+EIGRP маршрутаў, на якім можам бачыць, што для маршруту
+172.\-31.\-1.\-0/24 павялічылася метрыка з 2595895 да 2595974, так як
+дадзены маршрут быў атрыманы ад маршрутызатара R1.
+
+\lstinputlisting[caption={Табліца EIGRP маршрутаў на маршрутызатары R2},%
+                            label={lst: R2 after/routes},%
+                            language=bash]{R2/after/routes.txt}
+
+
+У лістынгу \ref{lst: R2 after/topology} прадстаўлена EIGRP тапалогія
+на маршрутызатары R2, якая паказвае, што метрыка змянілася толькі
+для маршрутаў, якія былі атрыманыя ад маршрутызатара R1.
+
+\lstinputlisting[caption={EIGRP тапалогія на маршрутызатары R1},%
+                            label={lst: R2 after/topology},%
+                            language=bash]{R2/after/topology.txt}
+
+\subsubsection{Маршрутызатар R3.}
+
+У лістынгу \ref{lst: R3 after/routes} прадстаўлена табліца EIGRP маршрутаў на маршрутызатары R3.
+
+\lstinputlisting[caption={Табліца EIGRP маршрутаў на маршрутызатары R3},%
+                            label={lst: R3 after/routes},%
+                            language=bash]{R3/after/routes.txt}
+
+Як бачым з табліцы маршрутызацыі маршрутызатара R3, аналагічна маршрутызатару R2, змянілася метрыка
+для сеткі 172.\-31.\-1.\-0, якая была атрыманая ад маршрутызатара R1.
+
+У лістынгу \ref{lst: R3 after/topology} прадстаўлена EIGRP тапалогія
+на маршрутызатары R3, якая падцвярджае, што метрыка змянілася толькі
+для маршрутаў, якія былі атрыманыя ад маршрутызатара R1.
+
+\lstinputlisting[caption={EIGRP тапалогія на маршрутызатары R3},%
+                            label={lst: R3 after/topology},%
+                            language=bash]{R3/after/topology.txt}
