--- a/part4.tex
+++ b/part4.tex
@@ -51,3 +51,140 @@
     \item кантроль за выкананнем патрабаванняў па АП;
     \item удасканаленне ўмоў працы і правядзенне прафілактычных работ па папярэджанні вытворчага траўматызму, прафесійных і вытворча абумоўленых захворванняў.
 \end{enumerate}
+
+\subsection{Ідэнтыфікацыя і аналіз шкодных і небяспечных фактараў}
+
+Арганізацыя «ЭПАМ Сістэмз» валодае мноствам структурных падраздзяленняў, сярод якіх: некалькі дэпартаментаў па распрацоўцы праграмнага забеспячэння, дэпартамент па інфармацыйным забеспячэнні, аддзяленне развіцця сeрвісаў, адміністрацыйны дэпартамент, аддзяленне кіравання персаналам, тэхнічнае аддзяленне, фінансавы дэпартамент і іншыя.
+
+У дадзеным раздзеле будзе праведзена ідэнтыфікацыя шкодных і небяспечных вытворчых фактараў для дэпартамента па распрацоўцы праграмнага забеспячэння.
+
+Дадзены дэпартамент быў абраны, так як распрацоўка праграмнага забеспячэння
+з'яўляецца галоўнай функцыяй арганізацыі, а значыць большая частка супрацоўнікаў належыць да дазенага дэпартамента.
+
+Шкодны вытворчы фактар --- гэта фактар, які можа прывесці да розных захворванняў або пагоршыць ўжо існуючыя захворванні.
+
+Небяспечны вытворчы фактар --- гэта фактар, які можа прывесці да траўмы, у тым ліку смяротнай.
+
+Класіфікацыя небяспечных і шкодных вытворчых фактараў па прыродзе ўплыву на здароўе чалавека падрадзяляюцца на:
+\begin{enumerate}
+    \item фізічныя;
+    \item хімічныя;
+    \item біялагічныя;
+    \item псіхафізіалагічныя.
+\end{enumerate}
+
+Наяўнасць фізічных фактараў галоўным чынам абумоўлена выкананнем работ на персанальным камп'ютары пры стварэнні праграмнага забеспячэння. Фізічныя фактары пры працы за камп'ютарам: павышаны ўзровень электрамагнітных выпраменьванняў, падвышаная напружанасць электрычнага поля, падвышанае значэнне напругі ў электрычным ланцугу, замыканне, павышаны ўзровень статычнай электрычнасці, адсутнасць або недахоп натуральнага святла, недастатковая штучная асветленасць працоўнай зоны, падвышаная яркасць святла, падвышаная кантраснасць, манатоннасць працоўнага працэсу.
+
+Галоўным псіхалагічным фактарам у дэпартаменце па распрацоўцы праграмнага забеспячэння з'яўляецца разумовае напружанне, якое можа быць выклікана манатоннасцю працы, невыкананнем рэжыму працы і адпачынку, пастаянная высокая канцэнтрацыя ўвагі, эмацыйная і псіхалагічная нагрузка.
+
+У дэпартаменце па распрацоўцы праграмнага забеспячэння адсутнічаюць непаспрэдныя хімічныя і біялагічныя шкодныя і небяспечныя вытворчыя фактары,
+аднак у дэпартаменце па распрацоўцы праграмнага забеспячэння могуць
+з'явіцца другасныя біялагічныя шкодныя і небяспечныя фактары (напрыклад, пандэмія інфекцыі COVID-19).
+
+\subsubsection{Арганізацыйныя, тэхналагічныя і іныя рашэнні для
+ўстаранення небяспечных і шкодных фактараў}
+
+Небяспечныя і шкодныя вытворчыя фактары становяцца такімі і прыводзяць да парушэння здароўя спецыялістаў, калі іх велічыні перавышаюць гранічна дапушчальныя велічыні, зацверджаныя ва ўстаноўленым парадку.
+
+Згодна з пунктам 8 санітарных норм і правілаў «Гігіенічная класіфікацыя ўмоў працы», зацверджаных пастановай Міністэрства аховы здароўя РБ ад 2012/12/28 № 211, умовы працы дзеляцца на 4 класы:
+\begin{enumerate}
+    \item 1 клас --- аптымальныя ўмовы працы;
+    \item 2 клас --- дапушчальныя ўмовы працы;
+    \item 3 клас --- шкодныя ўмовы працы;
+    \item 4 клас --- небяспечныя ўмовы працы.
+\end{enumerate}
+
+У табліцах \ref{table: healthy1} і \ref{table: healthy2} прыведзены гранічна дапушчальныя ўзроўні электрамагнітных палёў ад ВДТ, ЭВМ і перыферыйных прылад у адпаведнасці з гігіенічным нарматывам «Гранічна дапушчальныя ўзроўні нарміруемых параметраў пры працы з відэадысплейнымі тэрміналамі і электронна-вылічальнымі машынамі».
+
+\begin{table}[htp]
+    \caption{Гранічна дапушчальныя ўзроўні электрамагнітных палёў ад ВДТ і ЭВМ}
+    \begin{tabularx}{\textwidth}{ | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X | }
+    \hline
+        Назва параметра & Гранічна дапушчальныя ўзроўні \\
+    \hline
+        Напрыжанасць электрычнага поля
+        ў дыяпазоне частот & \\
+    \hline
+        5 Гц - 2 кГц & Не больш за 25 В/м \\
+    \hline
+        2-400 кГц & Не больш за 2,5 В/м \\
+    \hline
+        Шчыльнасць магнітнага патоку магнітнага поля
+        ў дыяпазоне частот & \\
+    \hline
+        5 Гц - 2 кГц & Не больш за 250 нТл \\
+    \hline
+        2-400 кГц & Не больш за 25 нТл \\
+    \hline
+        Напружанасць электрастатычнага поля & Не больш за 15 кВ/м \\
+    \hline
+    \end{tabularx}
+    \label{table: healthy1}
+\end{table}
+
+\vspace{-\baselineskip}
+
+\begin{table}[htp]
+    \caption{Гранічна дапушчальныя ўзроўні электрамагнітных палёў ад перыферыйных прылад}
+    \begin{tabularx}{\textwidth}{ | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X | }
+    \hline
+        Дыяпазон частот & 0,3 - 300 кГц &
+        0,3 - 3 МГц & 3 - 30 МГц & 30 - 300 МГц & 0,3 - 300 ГГц\\
+    \hline
+        Гранічна дапушчальныя ўзроўні & 25 В/м &
+        15 В/м & 10 В/м & 3 В/м & 10 мкВт/кв. см \\
+    \hline
+    \end{tabularx}
+    \label{table: healthy2}
+\end{table}
+
+У табліцы \ref{table: healthy3} прыведзены гранічна дапушчальныя ўзроўні інтэнсіўнасці выпраменьвання з боку экрана ВДТ і ЭВМ. У табліцы
+\ref{table: healthy4} прыведзены дапушчальныя візуальныя эрганамічныя параметры прылад адлюстравання ВДТ і ЭВМ.
+
+\begin{table}[htp]
+    \caption{Гранічна дапушчальныя ўзроўні інтэнсіўнасці выпраменьвання
+    з боку экранаў ВДТ і ЭВМ}
+    \begin{tabularx}{\textwidth}{ | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X | }
+    \hline
+        Дыяпазон даўжыні хваль & 200 - 280 нм &
+        280 - 315 нм & 315 - 400 нм \\
+    \hline
+        Гранічна дапушчальныя ўзроўні & Не дапушчальны &
+        0,0001 Вт/кв. м. & 0,1 Вт/кв. м. \\
+    \hline
+    \end{tabularx}
+    \label{table: healthy3}
+\end{table}
+
+\clearpage
+
+\begin{table}[htp]
+    \caption{Дапушчальныя візуальныя эрганамічныя параметры прылад
+    адлюстравання ВДТ і ЭВМ}
+    \begin{tabularx}{\textwidth}{ | >{\centering\arraybackslash}X
+                                  | >{\centering\arraybackslash}X | }
+    \hline
+        Параметры & Дапушчальныя значэнні \\
+    \hline
+        Яркасць белага поля & Не менш за 35 кд/кв. м \\
+    \hline
+        Нераўнамернасць яркасці працоўнага поля & Не больш за +/-20\% \\
+    \hline
+         Кантрастнасць (манахромны рэжым) & Не менш за 3:1 \\
+    \hline
+        Часавая нестабільнасць выявы & Не павінна фіксавацца \\
+    \hline
+        Частата абнаўлення выявы (дыскрэтны экран) & Не менш за 60 Гц \\
+    \hline
+    \end{tabularx}
+    \label{table: healthy4}
+\end{table}
