--- a/preamble.tex
+++ b/preamble.tex
@@ -253,6 +253,8 @@
 %%% Табліцы
 \usepackage{array,tabularx,tabulary,booktabs, tabu} % дадатковыя магчымасці для табліц
 \usepackage{longtable}                        % для табліц на некалькі старонак
+
+\usepackage{cellspace, makecell}              % для табліц
 \usepackage{multirow}                         % зліццё радкоў у табліцы
 \usepackage{adjustbox}                        % для афармлення блокаў з пэўным выраўноўваннем
 \usepackage{float}                            % опцыя H (уставіць акурат сюды) для табліц і ілюстрацый
