--- a/part4.tex
+++ b/part4.tex
@@ -188,3 +188,45 @@
     \end{tabularx}
     \label{table: healthy4}
 \end{table}
+
+У арганізацыі <<ЭПАМ Сістэмз>> для падтрымкі аховы працы дзейнічае
+дакумент аб ахове здароўя (EPAM Health and Safety Framework), якога павінны пільнавацца
+ўсе супрацоўнікі арганізацыі.
+
+Элементы аховы здароўя ЭПАМ Сістэмз забяспечваюць:
+\begin{enumerate}
+    \item маніторынг заканадаўства і нормаў, звязаных з EHS, і выкананне ўсіх дзеючых патрабаванняў;
+    \item бяспечнае і здаровае працоўнае асяроддзе для ўсіх супрацоўнікаў і падрадчыкаў, якое адпавядае нарматыўным патрабаванням і перадавой практыцы кіравання;
+    \item устаноўленыя працэдуры распазнавання, ацэнкі і кантролю небяспекі для здароўя і бяспекі на аб'екце;
+    \item Адэкватны ўзровень падрыхтоўкі спецыялістаў па ахове працы для ўсіх супрацоўнікаў і падрадчыкаў;
+    \item ухіленне неабгрунтаваных рызык, звязаных з сродкамі, паслугамі і іншымі відамі работ;
+    \item мінімізацыя выкарыстання і выкіду таксічных і небяспечных матэрыялаў;
+    \item улік уздзеяння EHS пры распрацоўцы і вытворчасці паслуг ЭПАМ з мэтай паўторнага выкарыстання сыравіны і прадухілення забруджвання навакольнага асяроддзя;
+    \item пастаянная ацэнка і абнаўленне праграм па ахове здароўя і бяспекі для забеспячэння пастаяннага ўдасканалення і даўгавечнай эфектыўнасці.
+\end{enumerate}
+
+Калі супрацоўнік не ведае, як выканаць пэўную задачу, альбо лічыць, што выкананне гэтай задачы альбо выкарыстанне абсталявання небяспечна, ён абавязаны як мага хутчэй паведаміць пра гэта свайму кіраўніку. Акрамя таго, супрацоўнік можа, калі захоча, спаслацца на працэдуру разгляду зваротаў ЭПАМ, альбо можа падаць скаргу ў адпаведнасці з палажэннямі ЭПАМ аб раскрыцці інфармацыі ў грамадскім інтарэсе.
+
+Для прадухілення біялагічных фактараў уздзеяння на супрацоўнікаў быў распрацаваны план прадухілення і рэакцыі на масавыя захворванні.
+
+На малюнку \ref{img: pandemic prevention} прадстаўлены асноўныя крокі для
+прадухілення масавага захворвання.
+
+\clearpage
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=\textwidth]{pandemic_prevention.pdf}
+    \vspace{-1.4\baselineskip}
+    \caption{План прадухілення масавага захворвання}
+    \label{img: pandemic prevention}
+\end{figure}
+
+Коратка разгледзім крокі плана прадухілення масавага захворвання:
+\begin{enumerate}
+    \item маніторынг знешняй сітуацыі: начальнік вядзе спіс кантактаў медыцынскіх спецыялістаў, каб мець кансультацыю і параду адносна гэтага плана і яго рэалізацыі. Усе паведамленні пра любую пандэмічную пагрозу, якая можа выклікаць сур'ёзную распаўсюджаную хваробу, публікуюцца ў дзяржаўных сродках масавай інфармацыі;
+    \item маніторынг унутранай сітуацыі: начальнік штотыдзень запытвае
+    справаздачу пра ўнутраныя заяўкі на бальнічныя лісты і дні. Калі колькасць хворых супрацоўнікаў павялічыцца да 5\%, начальнік інфармуе кіраўнікоў рэсурсаў, кіраўнікоў уліковых запісаў і членаў групы па пандэмічных рэагаваннях па электроннай пошце пра статыстыку і дае далейшыя інструкцыі;
+    \item праактыўнае інфармаванне супрацоўнікаў: начальнік таксама распрацаўвае спіс рэкамендаваных прэпаратаў для барацьбы з інфекцыямі для служб кіравання офісам (напрыклад, мыла, адмысловыя тканіны, маскі і дэзінфікуючыя сродкі). Адміністрацыйныя службы, якія адказваюць за кожнае месца, маюць дастатковую колькасць для іх пастаяннага абнаўлення.
+    \item навучанне супрацоўнікаў: начальнік, прынамсі, штогод і перад сезонам вірусных захворванняў прадастаўляе інфармацыю ўсім супрацоўнікам адносна практыкі, рэкамендаванай службовымі асобамі аховы здароўя для зніжэння распаўсюджвання інфекцыі. Запрашаецца эпідэміёлаг на публічную лекцыю пра тое, як паводзіць сябе ў сезон віруснага захворвання і як рэагаваць у выпадку якіх-небудзь унікальных заразных/інфекцыйных захворванняў.
+\end{enumerate}
