--- a/part4.tex
+++ b/part4.tex
@@ -81,7 +81,7 @@
 аднак у дэпартаменце па распрацоўцы праграмнага забеспячэння могуць
 з'явіцца другасныя біялагічныя шкодныя і небяспечныя фактары (напрыклад, пандэмія інфекцыі COVID-19).
 
-\subsubsection{Арганізацыйныя, тэхналагічныя і іныя рашэнні для
+\subsection{Арганізацыйныя, тэхналагічныя і іныя рашэнні для
 ўстаранення небяспечных і шкодных фактараў}
 
 Небяспечныя і шкодныя вытворчыя фактары становяцца такімі і прыводзяць да парушэння здароўя спецыялістаў, калі іх велічыні перавышаюць гранічна дапушчальныя велічыні, зацверджаныя ва ўстаноўленым парадку.
@@ -230,3 +230,56 @@
     \item праактыўнае інфармаванне супрацоўнікаў: начальнік таксама распрацаўвае спіс рэкамендаваных прэпаратаў для барацьбы з інфекцыямі для служб кіравання офісам (напрыклад, мыла, адмысловыя тканіны, маскі і дэзінфікуючыя сродкі). Адміністрацыйныя службы, якія адказваюць за кожнае месца, маюць дастатковую колькасць для іх пастаяннага абнаўлення.
     \item навучанне супрацоўнікаў: начальнік, прынамсі, штогод і перад сезонам вірусных захворванняў прадастаўляе інфармацыю ўсім супрацоўнікам адносна практыкі, рэкамендаванай службовымі асобамі аховы здароўя для зніжэння распаўсюджвання інфекцыі. Запрашаецца эпідэміёлаг на публічную лекцыю пра тое, як паводзіць сябе ў сезон віруснага захворвання і як рэагаваць у выпадку якіх-небудзь унікальных заразных/інфекцыйных захворванняў.
 \end{enumerate}
+
+\subsection{Эрганоміка}
+
+Эрганоміка --- гэта навуковая дысцыпліна, звязаная з разуменнем узаемасувязяў паміж чалавекам і іншымі элементамі сістэмы, а таксама прымяненнем тэорыі, прынцыпаў, даных і метадаў для праектавання сістэм з мэтай аптымізацыі дабрабыту чалавека і агульнай прадукцыйнасці сістэмы.
+
+Тэрміны «эрганоміка» і «чалавечы фактар» могуць выкарыстоўвацца ўзаемазамяняема, хоць «эрганоміка» часта выкарыстоўваецца ў дачыненні да фізічных аспектаў навакольнага асяроддзя, такіх як рабочыя станцыі і панэлі кіравання, у той час як «чалавечы фактар» часта выкарыстоўваецца ў адносінах да больш шырокіх сістэм, у якой працуюць людзі.
+
+Для дасягнення найлепшых рэзультатаў эрганоміка выкарыстоўвае даныя і метады некалькіх дысцыплін:
+\begin{enumerate}
+    \item антрапаметрыя: памеры цела, формы, варыяцыі;
+    \item біямеханіка: цягліцы, рычагі, сіла;
+    \item фізіка навакольнага асяроддзя: шум, святло, цяпло, холад, радыяцыя;
+    \item сістэмы арганізма: слых, зрок, дотык, нюх, смак;
+    \item прыкладная псіхалогія: навучанне, памылкі, адрозненні, навыкі;
+    \item сацыяльная псіхалогія: суполкі, зносіны, навучанне, паводзіны.
+\end{enumerate}
+
+Па ўмовах працы адрозніваюць некалькі відаў працоўных месцаў: з нармальнымі, цяжкімі, небяспечнымі і шкоднымі ўмовамі працы. Пры арганізацыі працоўных месцаў у адпаведнасці з умовамі працы, вырашаюцца наступныя задачы:
+\begin{enumerate}
+    \item рацыянальнае выкарыстанне вытворчай плошчы прадпрыемства;
+    \item рацыянальная ўзаемасувязь паміж сумежнымі працоўнымі месцамі;
+    \item ізаляцыя працоўных месцаў са шкоднымі ўмовамі працы і мінімізацыя ўплыву шкодных фактараў на супрацоўнікаў арганізацыі;
+    \item забеспячэнне найменшых затрат працоўнага часу на выкананне работ, якія замацаваны за працоўным месцам;
+    \item зручнасць выканання работы і абслугоўвання абсталявання;
+    \item рацыяналізацыя рабочай паставы супрацоўніка;
+    \item стварэнне спрыяльных і бяспечных умоў працы.
+\end{enumerate}
+
+Атэстацыя працоўных месцаў з'яўляецца спецыяльнай працэдурай, якая дае дакладную інфармацыю аб умовах працы, шкодных і небяспечных фактарах вытворчага асяроддзя, напружанасці і цяжару працоўнага працэсу, якія існуюць на канкрэтных працоўных месцах.
+
+Мэты правядзення атэстацыі:
+\begin{enumerate}
+    \item вызначэнне ўмоў працы на канкрэтным працоўным месцы, распрацоўка плана мерапрыемстваў па іх паляпшэнні;
+    \item вызначэння права супрацоўніка на пенсію па ўзросце за працу з асаблівымі ўмовамі працы, дадатковы адпачынак за працу са шкоднымі і (або) небяспечнымі ўмовамі працы, скарочаную працягласць працоўнага часу, аплату працы ў павышаным памеры шляхам устанаўлення даплат за працу са шкоднымі і (або) небяспечнымі ўмовамі працы;
+    \item устаноўка абавязку наймальніка па прафесійным пенсійным страхаванні супрацоўніка.
+\end{enumerate}
+
+Патрабаванні па праектаванню працоўных месцаў ўстаноўлены Санітарнымі нормамі і правіламі «Патрабаванні пры працы з відэадысплэйнымі тэрміналамі і электронна-вылічальнымі машынамі», зацверджанымі пастановай Міністэрства аховы здароўя Рэспублікі Беларусь ад 28 чэрвеня 2013 г. № 59.
+
+Памяшкання з персанальнымі камп'ютарамі павінны мець натуральнае і штучнае асвятленне. Забараняецца выкананне асноўнай працы з выкарыстаннем ВДТ, ЭВМ і ПЭВМ на працоўных месцах без натуральнага асвятлення, а таксама ў цокальных і падвальных памяшканнях.
+
+Мінімальная плошча аднаго працоўнага месца для дарослых карыстальнікаў і навучэнцаў устаноў прафесійна-тэхнічнай, сярэдняй спецыяльнай і вышэйшай адукацыі з выкарыстаннем ВДТ, ЭВМ і ПЭВМ на базе электронна-прамянёвай трубкі можа складаць не менш як 4,5 кв. м пры наступных умовах:
+\begin{enumerate}
+    \item адсутнасць на працоўным месцы перыферыйных прылад;
+    \item працягласць працы павінна складаць не больш за 4 гадзіна/дзень.
+\end{enumerate}
+
+Ва ўсіх астатніх выпадках плошча аднаго працоўнага месца для карыстальнікаў ВДТ, ЭВМ і ПЭВМ павінна складаць не менш за 4,5 кв. м.
+Пры ўзвядзенні і рэканструкцыі будынкаў з памяшканнямі для ВДТ, ЭВМ і ПЭВМ гэтыя памяшканні варта праектаваць вышынёй ад падлогі да столі не менш за 3,0 м.
+Пры размяшчэнні працоўных месцаў з ВДТ, ЭВМ і ПЭВМ адлегласць паміж працоўнымі сталамі з відэаманітораў (у кірунку тылу паверхні аднаго відэаманітора і экрана іншага відэаманітора) павінна быць не менш за 2,0 м, а адлегласць паміж бакавымі паверхнямі відэаманітораў - не менш за 1,2 м .
+Працоўныя месцы з ВДТ, ЭВМ і ПЭВМ пры выкананні творчай працы, якая патрабуе значнага разумовага напружання цi высокай канцэнтрацыі ўвагі, рэкамендуецца ізаляваць адзін ад аднаго перагародкамі вышынёй 1,5-2,0 м.
+Забараняецца размяшчаць працоўныя месцы з ВДТ, ЭВМ і ПЭВМ на адлегласці менш за 10 м ад сілавых кабеляў, уводаў і высакавольтных трансформаторов.Помещения, дзе размяшчаюцца рабочыя месцы з ВДТ, ЭВМ і ПЭВМ, павінны быць абсталяваны ахоўным зазямленне (зануленні) у адпаведнасці з тэхнічнымі патрабаваннямі па эксплуатацыі.
+Памяшкання з ВДТ, ЭВМ і ПЭВМ павінны абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй [5].
