--- a/part4.tex
+++ b/part4.tex
@@ -278,8 +278,13 @@
 \end{enumerate}
 
 Ва ўсіх астатніх выпадках плошча аднаго працоўнага месца для карыстальнікаў ВДТ, ЭВМ і ПЭВМ павінна складаць не менш за 4,5 кв. м.
+
 Пры ўзвядзенні і рэканструкцыі будынкаў з памяшканнямі для ВДТ, ЭВМ і ПЭВМ гэтыя памяшканні варта праектаваць вышынёй ад падлогі да столі не менш за 3,0 м.
-Пры размяшчэнні працоўных месцаў з ВДТ, ЭВМ і ПЭВМ адлегласць паміж працоўнымі сталамі з відэаманітораў (у кірунку тылу паверхні аднаго відэаманітора і экрана іншага відэаманітора) павінна быць не менш за 2,0 м, а адлегласць паміж бакавымі паверхнямі відэаманітораў - не менш за 1,2 м .
-Працоўныя месцы з ВДТ, ЭВМ і ПЭВМ пры выкананні творчай працы, якая патрабуе значнага разумовага напружання цi высокай канцэнтрацыі ўвагі, рэкамендуецца ізаляваць адзін ад аднаго перагародкамі вышынёй 1,5-2,0 м.
-Забараняецца размяшчаць працоўныя месцы з ВДТ, ЭВМ і ПЭВМ на адлегласці менш за 10 м ад сілавых кабеляў, уводаў і высакавольтных трансформаторов.Помещения, дзе размяшчаюцца рабочыя месцы з ВДТ, ЭВМ і ПЭВМ, павінны быць абсталяваны ахоўным зазямленне (зануленні) у адпаведнасці з тэхнічнымі патрабаваннямі па эксплуатацыі.
-Памяшкання з ВДТ, ЭВМ і ПЭВМ павінны абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй [5].
+
+Пры размяшчэнні працоўных месцаў з ВДТ, ЭВМ і ПЭВМ адлегласць паміж працоўнымі сталамі з відэаманіторамі (у кірунку тылу паверхні аднаго відэаманітора і экрана іншага відэаманітора) павінна быць не менш за 2,0 м, а адлегласць паміж бакавымі паверхнямі відэаманітораў --- не менш за 1,2 м.
+
+Працоўныя месцы з ВДТ, ЭВМ і ПЭВМ пры выкананні творчай працы, якая патрабуе значнага разумовага напружання цi высокай канцэнтрацыі ўвагі, рэкамендуецца ізаляваць адзін ад аднаго перагародкамі вышынёй 1,5--2,0 м.
+
+Забараняецца размяшчаць працоўныя месцы з ВДТ, ЭВМ і ПЭВМ на адлегласці менш за 10 м ад сілавых кабеляў, уводаў і высакавольтных трансформатараў. Памяшканні, дзе размяшчаюцца працоўныя месцы з ВДТ, ЭВМ і ПЭВМ, павінны быць абсталяваны ахоўным зазямленне (зануленнем) у адпаведнасці з тэхнічнымі патрабаваннямі па эксплуатацыі.
+
+Памяшкання з ВДТ, ЭВМ і ПЭВМ павінны быць абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй.
