--- a/part4.tex
+++ b/part4.tex
@@ -287,4 +287,19 @@
 
 Забараняецца размяшчаць працоўныя месцы з ВДТ, ЭВМ і ПЭВМ на адлегласці менш за 10 м ад сілавых кабеляў, уводаў і высакавольтных трансформатараў. Памяшканні, дзе размяшчаюцца працоўныя месцы з ВДТ, ЭВМ і ПЭВМ, павінны быць абсталяваны ахоўным зазямленне (зануленнем) у адпаведнасці з тэхнічнымі патрабаваннямі па эксплуатацыі.
 
-Памяшкання з ВДТ, ЭВМ і ПЭВМ павінны быць абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй.
+Памяшканні з ВДТ, ЭВМ і ПЭВМ павінны быць абсталяваны сістэмамі ацяплення, кандыцыянавання паветра або эфектыўнай прытокава-выцяжной вентыляцыяй.
+
+\subsection{Вынікі і прапановы}
+
+У дадзеным раздзеле даецца аналіз стану аховы працы ў арганізацыі «ЭПАМ Сістэмз»; абавязкі інжынерна-тэхнічных супрацоўнікаў па ахове працы ў адпаведнай галінe вытворчасці; неабходныя санітарна-гігіенічныя разлікі, асабліва для шкодных вытворчасцяў; адпаведныя канструктыўныя распрацоўкі і прапанаваныя мерапрыемствы, якія забяспечваюць ахову працы.
+
+У IT-кампаніях пераважная колькасць працоўнага часу супрацоўнік праводзіць за камп'ютарам. У працэсе працы з ПЭВМ магчыма ўздзеянне на працуючых такіх шкодных і (або) небяспечных вытворчых фактараў як: павышаны ўзровень электрамагнітных, іанізуючых выпраменьванняў, статычнай электрычнасці; падвышаная напружанасць электрастатычнага поля; падвышаная ці паніжаная іянізацыя паветра; статычныя перагрузкі касцёва-цягліцавага апарата і дынамічныя лакальныя перагрузкі цягліц рук; разумовае перанапружанне; эмацыйныя перагрузкі і інш.
+
+Самым галоўным у працы такога тыпу з'яўляецца захаванне устаноўленых рэгламентаваных перапынкаў кожныя 1,5-2 гадзіны, працягласць якіх складае ад 10 да 20 хвілін, а пры працы ў начны час --- да 60 хвілін.
+
+Для падтрымкі фізічнага і эмацыйнага здароўя супрацоўніка дадаткова можна:
+\begin{enumerate}
+    \item праводзіць супольныя (для ўсяго офіса ці аддзела) заняткі фізічнымі практыкаваннямі (напрыклад, зарадка);
+    \item забяспечваць працоўныя месцы эрганамічным абсталяваннем (напрыклад, крэслы ці маніторы, вышыню якіх можна рэгуляваць у індывідуальным парадку);
+    \item праводзіць навучанне супрацоўнікаў правілам эрганамічнай работы для павышэння прадукцыйнасці і захавання здароўя.
+\end{enumerate}
