--- a/part4.tex
+++ b/part4.tex
@@ -233,9 +233,7 @@
 
 \subsection{Эрганоміка}
 
-Эрганоміка --- гэта навуковая дысцыпліна, звязаная з разуменнем узаемасувязяў паміж чалавекам і іншымі элементамі сістэмы, а таксама прымяненнем тэорыі, прынцыпаў, даных і метадаў для праектавання сістэм з мэтай аптымізацыі дабрабыту чалавека і агульнай прадукцыйнасці сістэмы.
-
-Тэрміны «эрганоміка» і «чалавечы фактар» могуць выкарыстоўвацца ўзаемазамяняема, хоць «эрганоміка» часта выкарыстоўваецца ў дачыненні да фізічных аспектаў навакольнага асяроддзя, такіх як рабочыя станцыі і панэлі кіравання, у той час як «чалавечы фактар» часта выкарыстоўваецца ў адносінах да больш шырокіх сістэм, у якой працуюць людзі.
+Эрганоміка --- навуковая і практычная дысцыпліна, якая сфармавалася на стыку псіхалогіі, фізіялогіі, гігіены працы, біямеханікі, антрапалогіі і шэрагу тэхнічных навук. Міждысцыплінарнае вывучэнне чалавека ці групы людзей ва ўмовах іх дзейнасці з прымяненнем тэхнічных сродкаў складае сутнасць эрганомікі. як навуковай дысцыпліны. Эрганамічныя даследаванні падпарадкаваны задачам праектавання і арыентаваны на пераўтваральнае-праектнае дзеянне, а не на пазнанне. Асноўны аб'ект даследавання эрганомікі --- сістэма «чалавек-машына». Эрганоміка вывучае пэўныя ўласцівасці гэтай сістэмы, абумоўленыя месцам і роляй чалавека ў ёй, якія атрымалі назву «чалавечага фактару» у тэхніцы. Гэтыя ўласцівасці не зводзяцца да асобных характарыстык чалавека, машыны, прадмета дзейнасці і асяроддзя. Чалавечыя фактары ў тэхніцы ўяўляюць сабой інтэгральныя паказчыкі сувязі чалавека, машыны, прадмета і асяроддзя; яны існуюць «тут і цяпер», канкрэтна выяўляюцца падчас ўзаемадзеяння чалавека і тэхнічнай сістэмы.
 
 Для дасягнення найлепшых рэзультатаў эрганоміка выкарыстоўвае даныя і метады некалькіх дысцыплін:
 \begin{enumerate}
@@ -291,14 +289,13 @@
 
 \subsection{Вынікі і прапановы}
 
-У дадзеным раздзеле даецца аналіз стану аховы працы ў арганізацыі «ЭПАМ Сістэмз»; абавязкі інжынерна-тэхнічных супрацоўнікаў па ахове працы ў адпаведнай галінe вытворчасці; неабходныя санітарна-гігіенічныя разлікі, асабліва для шкодных вытворчасцяў; адпаведныя канструктыўныя распрацоўкі і прапанаваныя мерапрыемствы, якія забяспечваюць ахову працы.
+У дадзеным раздзеле даецца аналіз стану аховы працы ў арганізацыі «ЭПАМ Сістэмз»; абавязкі інжынерна-тэхнічных супрацоўнікаў па ахове працы ў адпаведнай галінe вытворчасці; адпаведныя канструктыўныя распрацоўкі і прапанаваныя мерапрыемствы, якія забяспечваюць ахову працы.
 
-У IT-кампаніях пераважная колькасць працоўнага часу супрацоўнік праводзіць за камп'ютарам. У працэсе працы з ПЭВМ магчыма ўздзеянне на працуючых такіх шкодных і (або) небяспечных вытворчых фактараў як: павышаны ўзровень электрамагнітных, іанізуючых выпраменьванняў, статычнай электрычнасці; падвышаная напружанасць электрастатычнага поля; падвышаная ці паніжаная іянізацыя паветра; статычныя перагрузкі касцёва-цягліцавага апарата і дынамічныя лакальныя перагрузкі цягліц рук; разумовае перанапружанне; эмацыйныя перагрузкі і інш.
-
-Самым галоўным у працы такога тыпу з'яўляецца захаванне устаноўленых рэгламентаваных перапынкаў кожныя 1,5-2 гадзіны, працягласць якіх складае ад 10 да 20 хвілін, а пры працы ў начны час --- да 60 хвілін.
+У IT-кампаніях большую колькасць працоўнага часу супрацоўнік праводзіць за кам\-п'ю\-та\-рам. У працэсе працы з ПЭВМ магчыма ўздзеянне на працуючых такіх шкодных і (або) небяспечных вытворчых фактараў як: павышаны ўзровень электрамагнітных, іанізуючых выпраменьванняў, статычнай электрычнасці; падвышаная напружанасць электрастатычнага поля; падвышаная ці паніжаная іянізацыя паветра; статычныя перагрузкі касцёва-цягліцавага апарата і дынамічныя лакальныя перагрузкі цягліц рук; разумовае перанапружанне; эмацыйныя перагрузкі і інш.
 
 Для падтрымкі фізічнага і эмацыйнага здароўя супрацоўніка дадаткова можна:
 \begin{enumerate}
+    \item прытрымлівацца рэгламентаваных перапынкаў кожныя 1,5-2 гадзіны, з працягласцю 10-20 хвілін;
     \item праводзіць супольныя (для ўсяго офіса ці аддзела) заняткі фізічнымі практыкаваннямі (напрыклад, зарадка);
     \item забяспечваць працоўныя месцы эрганамічным абсталяваннем (напрыклад, крэслы ці маніторы, вышыню якіх можна рэгуляваць у індывідуальным парадку);
     \item праводзіць навучанне супрацоўнікаў правілам эрганамічнай работы для павышэння прадукцыйнасці і захавання здароўя.
