--- a/part5.tex
+++ b/part5.tex
@@ -19,7 +19,7 @@
     \item эканомія на сеткавых устройствах. Так як кіруючая функцыя рэалізаваная на асобным
         кантролеры, то сеткавае ўстройства больш не патрабуе наяўнасці вялікіх рэсурсаў
         (працэсар, памяць і да т. п.), што спрашчае яго структуру, а значыць і кошт устройства;
-    \item памяншэнне працазатрат на суправаджэнне сеткі. Так як усё інфармацыя і канфігурацыя
+    \item памяншэнне працазатрат на суправаджэнне сеткі. Так як ўся інфармацыя і канфігурацыя
         маршрутызатараў знаходзіцца ў адным месцы, то супрацоўнікі патрабуецца менш часу для
         карэктыроўкі канфігурацыі пры неабходнасці;
     \item павелічэнне эфектыўнасці выкарыстання рэсурсаў секті. Кантролер дазваляе адсочваць
@@ -27,4 +27,76 @@
         ўстройства для дасягнення аптымальнай канфігурацыі ў кожны момант часу.
 \end{enumerate}
 
+\subsection{Разлік сабекошту і цаны праграмнага прадукту}
 
+Першым крокам неабходна вызначыць вартасную ацэнку распрацаванага праграмнага прадукту. Яна прадугледжвае складанне каштарысу выдаткаў, на падставе якога вызначаецца сабекошт і адпускная цана распрацаванага праграмнага прадукту.
+Каштарыс выдаткаў ўключае наступныя выдаткі:
+\begin{enumerate}
+    \item выдаткі на аплату працы выканаўцаў;
+    \item адлічэнні на сацыяльныя патрэбы;
+    \item матэрыялы і камплектуючыя;
+    \item выдаткі на навуковыя камандзіроўкі;
+    \item іншыя прамыя выдаткі;
+    \item накладныя выдаткі.
+\end{enumerate}
+
+У артыкул «Выдаткі на аплату працы» ўключаюцца асноўная і дадатковая заработная плата ўсіх супрацоўнікаў, занятых распрацоўкай праграмнага забеспячэння для SDN кантролера. У дадзеным выпадку напісаннем праграмы займаецца адзін інжынер-праграміст.
+
+Разлік асноўнай заработнай платы выконваецца па формуле (\ref{eqn: eqn1}):
+\begin{equation}
+    \label{eqn: eqn1}
+    \text{З}_\text{o} = \sum_{i=1}^{n} \text{T}_\text{di} \cdot \text{Ф}_\text{П} \cdot \text{K}_\text{ПР}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{T}_\text{di}$ --- дзённая тарыфная стаўка $i$-га выканаўца, руб;
+    \item $\text{Ф}_\text{п}$ --- планавы фонд працоўнага часу - час, у перыяд якога
+        супрацоўнік $i$-ай катэгорыі прымаў удзел у распрацоўцы, дзён;
+    \item $\text{К}_\text{ПР}$ --- каэфіцыент прэміравання за выкананне планавых
+        паказальнікаў работы, роўны 1,4.
+\end{Explanation}
+
+Дзённая тарыфная стаўка $i$-га выканаўца разлічваецца наступным
+чынам:
+\begin{equation}
+    \text{T}_\text{дi} = \text{T}_\text{мі} / \text{Ф}_\text{р}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{T}_\text{мі}$ --- месячная тарыфная стаўка $i$-га выканаўца, руб;
+    \item $\text{Ф}_\text{р}$ --- сярэднемесячны фонд працоўна часу, дні.
+\end{Explanation}
+
+Разліковая норма працоўнага часу ў днях на 2020 год пры пяцідзённым працоўным тыдні складае 256 дзён. Тады сярэдне месячны фонд працоўнага часу складае прыблізна 21 дзень.
+
+Месячная тарыфная стаўка кожнага выканаўца вызначаецца па
+формуле (\ref{enq: enq3}):
+\begin{equation}
+    \label{enq: enq3}
+    \text{T}_\text{M} = \text{T}_\text{М1p} \cdot \text{T}_\text{K}
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{T}_\text{M1p}$ --- дзеючая месячная тарыфная стаўка першага разраду (41 рубель);
+    \item $\text{T}_\text{K}$ --- тарыфны каэфіцыент (1,21).
+\end{Explanation}
+
+Дадатковая заработная плата персанала ўключае выплаты, якія
+прадугледжаны дзеючым заканадаўствам за непрапрацаваны час ---
+водпуск, выплата за выслугу гадоў і да таго падобнае.
+Дадатковая заработная плата вызначаецца па формуле (\ref{eqn: eqn4}):
+
+\begin{equation}
+    \label{enq: enq4}
+    \text{З}_\text{Д} = \text{З}_\text{o} \cdot \text{H}_\text{Д} / 100\%
+\end{equation}
+\begin{Explanation}
+    \item[дзе] $\text{H}_\text{Д}$ --- нарматыў дадатковай заработнай платы (10\%).
+\end{Explanation}
+
+Агульныя затраты на аплату працы (ЗАП) вызначаецца па формуле
+(\ref{eqn: eqn5}):
+\begin{equation}
+    \label{eqn: eqn5}
+    \text{ЗАП} = \text{З}_\text{o} + \text{З}_\text{Д}
+\end{equation}
+
+Разлік асноўнай заработнай платы персаналу прадстаўлены
+ў \ref{table: 5.1}
