--- a/part5.tex
+++ b/part5.tex
@@ -74,7 +74,7 @@
     \text{T}_\text{M} = \text{T}_\text{М1p} \cdot \text{T}_\text{K}
 \end{equation}
 \begin{Explanation}
-    \item[дзе] $\text{T}_\text{M1p}$ --- дзеючая месячная тарыфная стаўка першага разраду (41 рубель);
+    \item[дзе] $\text{T}_\text{M1p}$ --- дзеючая месячная тарыфная стаўка першага разраду (82 рубелі);
     \item $\text{T}_\text{K}$ --- тарыфны каэфіцыент (1,21).
 \end{Explanation}
 
@@ -84,7 +84,7 @@
 Дадатковая заработная плата вызначаецца па формуле (\ref{eqn: eqn4}):
 
 \begin{equation}
-    \label{enq: enq4}
+    \label{eqn: eqn4}
     \text{З}_\text{Д} = \text{З}_\text{o} \cdot \text{H}_\text{Д} / 100\%
 \end{equation}
 \begin{Explanation}
@@ -98,5 +98,46 @@
     \text{ЗАП} = \text{З}_\text{o} + \text{З}_\text{Д}
 \end{equation}
 
-Разлік асноўнай заработнай платы персаналу прадстаўлены
-ў \ref{table: 5.1}
+Разлік асноўнай заработнай платы персаналу прадстаўлены ў табліцы
+\ref{table: 5.1}.
+
+\begin{table}[htp]
+    \caption{Разлік асноўнай заработнай платы навукова-вытворчага персаналу}
+    \begin{tabularx}{\textwidth}{ 
+        | p{2.1cm}
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X 
+        | >{\centering\arraybackslash}X |
+    }
+    \hline
+        Катэгорыя супрацоўнікаў
+        & Колькасць чалавек
+        & Тарыфны каэфіцыент
+        & Месячная тарыфная стаўка
+        & Дзённая тарыфная стаўка
+        & Планавы фонд працоўнага часу аднаго супрацоўніка
+        & Аплата за адпрацаваны час аднаго супрацоўніка
+        & Асноўная заработная плата аднаго супрацоўніка з улікам прэміі
+        & Асноўная заработная плата з улікам прэміі, усяго \\
+    \hline
+        Інжынер-праграміст
+        & 1
+        & 1,21
+        & 99,22
+        & 4,72
+        & 21
+        & 99,12
+        & 99,12
+        & 99,12  \\
+    \hline
+        \multicolumn{8}{|l|}{Усяго}
+        & 99,12 \\
+    \hline
+    \end{tabularx}
+    \label{table: 5.1}
+\end{table}
